--- a/Resources/CSS/Template.css
+++ b/Resources/CSS/Template.css
@@ -34,7 +34,7 @@ div#container
     background-color: rgba(256,256,256,1);
     margin-left: auto;
     margin-right: auto;
-    width: 50em;
+    width: 750px;
     text-align: left;
     border-top: 4px solid #f66200;
     width:700px;
